--- a/desafio/package.json
+++ b/desafio/package.json
@@ -12,9 +12,9 @@
     "vercel-build": "npm run build"
   },
   "dependencies": {
-    "next": "^14.2.33",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "^15.5.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.19"
   },
